# ai-recruiting-assistant

./: .gitignore
.github/workflows/: backend.yml
backend/: Makefile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5db12afb2fce_create_jobs_table.py  7dee6c6c7d30_initial_setup.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/jobs/: crud.py  models.py  router.py  schemas.py
backend/tests/: conftest.py  test_health.py  test_jobs_api.py  test_jobs_crud.py
docs/: AI_Recruiting_Assistant_Design_Document.md
frontend/: package-lock.json
