[project]
name = "ai-recruiting-assistant"
version = "0.1.0"
description = "An AI-powered recruiting assistant built with FastAPI, React, and PostgreSQL."
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg[binary]",
    "alembic",
    "pydantic-settings",
    "python-dotenv",
]

[dependency-groups]
dev = ["pytest", "httpx", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
